objects/Open_Enrollment_Meetings__c.object
<CustomObject>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>National Accounts</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Strategic Accounts</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Interplan</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Labor Accounts</fullName>
                </value>
                <value>
                    <fullName>Missouri</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
                <value>
                    <fullName>New York</fullName>
                </value>
                <value>
                    <fullName>Ohio</fullName>
                </value>
                <value>
                    <fullName>Virginia</fullName>
                </value>
                <value>
                    <fullName>Wisconsin</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submarket__c</fullName>
        <formula>Text( Account__r.Submarket__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Submarket</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wellness_Programs__c</fullName>
        <formula>IF(INCLUDES(Plan_Type__c,&apos;HW - 24/7 NurseLine&apos;),&apos;HW - 24/7 NurseLine, &apos;,null)+ 
IF(INCLUDES(Plan_Type__c,&apos;HW - Anthem Health Rewards&apos;),&apos;HW - Anthem Health Rewards, &apos;,null)+ 
IF(INCLUDES(Plan_Type__c,&apos;HW - AIM&apos;),&apos;HW - AIM, &apos;,null)+ 
IF(INCLUDES(Plan_Type__c,&apos;HW - Behavioral Health&apos;),&apos;HW - Behavioral Health, &apos;,null)+ 
IF(INCLUDES(Plan_Type__c,&apos;HW - ComplexCare&apos;),&apos;HW - ComplexCare, &apos;,null)+ 
IF(INCLUDES(Plan_Type__c,&apos;HW - ConditionCare&apos;),&apos;HW - ConditionCare, &apos;,null)+ 
IF(INCLUDES(Plan_Type__c,&apos;HW - EAP&apos;),&apos;HW - EAP, &apos;,null)+ 
IF(INCLUDES(Plan_Type__c,&apos;HW - Future Moms&apos;),&apos;HW - Future Moms, &apos;,null)+ 
IF(INCLUDES(Plan_Type__c,&apos;HW - Healthy Lifestyles&apos;),&apos;HW - Healthy Lifestyles, &apos;,null)+ 
IF(INCLUDES(Plan_Type__c,&apos;HW - MyHealth Advantage&apos;),&apos;HW - MyHealth Advantage, &apos;,null)+ 
IF(INCLUDES(Plan_Type__c,&apos;HW - MyHealth Assessment&apos;),&apos;HW - MyHealth Assessment, &apos;,null)+ 
IF(INCLUDES(Plan_Type__c,&apos;HW - MyHealth Coach&apos;),&apos;HW - MyHealth Coach, &apos;,null)+ 
IF(INCLUDES(Plan_Type__c,&apos;HW - Worksite Wellness&apos;),&apos;HW - Worksite Wellness, &apos;,null)+ 
IF(INCLUDES(Plan_Type__c,&apos;HW - Anthem Health Guide&apos;),&apos;HW - Anthem Health Guide, &apos;,null)+ 
IF(INCLUDES(Plan_Type__c,&apos;HW - Integrated Health Model&apos;),&apos;HW - Integrated Health Model, &apos;,null)+ 
IF(INCLUDES(Plan_Type__c,&apos;HW - Anthem Mobile Health&apos;),&apos;HW - Anthem Mobile Health, &apos;,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Wellness Programs</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X10__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Account Managers will attach a file of the meetings for upload by OE coordinator when there are 10 or more</description>
        <inlineHelpText>Fill out and attach an Alternate Submission Form when the meetings number is 10 or greater.</inlineHelpText>
        <label>10+ Meetings - Alternate Submission</label>
        <type>Checkbox</type>
    </fields>
    <label>Open Enrollment Meetings</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Source__c</columns>
        <columns>OE_Coordinator_Contact__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Sales_Open_Enrollment_Meeting_Grid</fullName>
        <columns>NAME</columns>
        <columns>Request_is_from__c</columns>
        <columns>Anthem_Entity__c</columns>
        <columns>Account_Region__c</columns>
        <columns>Situs_State__c</columns>
        <columns>Submarket__c</columns>
        <columns>Group_Size__c</columns>
        <columns>Account_Branding__c</columns>
        <columns>Plan_Type__c</columns>
        <columns>Client_Arrangement__c</columns>
        <columns>Sole_Carrier_or_Multi_Carriers__c</columns>
        <columns>Performance_Guarantees__c</columns>
        <columns>Client_Drivers_Issues_Risks__c</columns>
        <columns>Dress_Code_for_Event__c</columns>
        <filterScope>Everything</filterScope>
        <label>Sales - Open Enrollment Meeting Grid</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>OE Meeting Grouping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Open Enrollment Meetings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Additional_Vendor_Other</fullName>
        <active>true</active>
        <description>Require the field &apos;Additional Comments&apos; to be populated if &apos;Additional Vendor&apos; = Other</description>
        <errorConditionFormula>AND(
$Profile.Name  &lt;&gt; &quot;API User&quot;,
INCLUDES( Additional_Vendors__c , &apos;Other - List Below&apos;)  &amp;&amp;   ISBLANK( Additional_Vendor_Name__c ))</errorConditionFormula>
        <errorDisplayField>Additional_Vendor_Name__c</errorDisplayField>
        <errorMessage>Please list additional Vendor Name(s)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CA_Strategy_Form_Details_section</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$Profile.Name &lt;&gt; &quot;API User&quot;,
AND(Anthem_Entity__c =&quot;Local/Large Group&quot;,
Situs_State__c =&quot;California&quot;,
Submarket__c !=&quot;Strategic&quot;,
NOT($Profile.Name = &apos;National Sales&apos;),
NOT($Profile.Name = &apos;National Sales Dual&apos;),
OR(ISPICKVAL(Case_Size__c,&quot;&quot; ),
ISPICKVAL(Domestic_Partner__c,&quot;&quot; ),
ISBLANK(Other_Carrier_Takeover__c))))</errorConditionFormula>
        <errorMessage>Please ensure all the fields under ‘CA Strategy Form Details’ section are filled.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Carrier_Type</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$Profile.Name  &lt;&gt; &quot;API User&quot;,
AND(ISPICKVAL(Sole_Carrier_or_Multi_Carriers__c,&apos;Multi Carrier&apos;),ISBLANK(Additional_Vendors__c)))</errorConditionFormula>
        <errorDisplayField>Additional_Vendors__c</errorDisplayField>
        <errorMessage>Please select Vendors</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cost_Center_Local_And_National_Required</fullName>
        <active>true</active>
        <errorConditionFormula>OR(AND($Permission.OE_Submit_Meetings,ISBLANK( Cost_Center_Local__c ), Anthem_Entity__c  = &apos;Local/Large Group&apos;),AND($Permission.OE_Submit_Meetings,ISBLANK(TEXT(Cost_Center_National__c)),Anthem_Entity__c  = &apos;National Accounts&apos;))</errorConditionFormula>
        <errorMessage>Please fill Cost Center fields</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Domestic_Partner</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$Profile.Name  &lt;&gt; &quot;API User&quot;,
NOT($Profile.Name = &apos;National Sales&apos;),
NOT($Profile.Name = &apos;National Sales Dual&apos;),
 
ISPICKVAL(Domestic_Partner__c,&apos;Yes&apos;),
ISBLANK(TEXT(Domestic_Partner_Type__c)
))</errorConditionFormula>
        <errorDisplayField>Domestic_Partner_Type__c</errorDisplayField>
        <errorMessage>Please enter partner type</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Is_Facilitator_Recruitment_Required</fullName>
        <active>false</active>
        <description>If field &apos;Is Facilitator Recruitment Required?&apos; = Yes, the fields: Dress Code, Plan Changes, and Client Drivers must be populated | 18-Jun-De-activated due to RUAT defect # PRDCRM-36690</description>
        <errorConditionFormula>AND(
$Profile.Name  &lt;&gt; &quot;API User&quot;,
ISPICKVAL(Is_Facilitator_Recruitment_Required__c ,&apos;Yes&apos;)&amp;&amp;(ISPICKVAL(Dress_Code_for_Event__c,&apos;&apos;) || 
ISBLANK( Client_Drivers_Issues_Risks__c)
))</errorConditionFormula>
        <errorMessage>Please complete Strategy Form Details below;  Dress Code for event, Plan changes and Client Drivers are required fields.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Other_Dress_Code_Details</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$Profile.Name  &lt;&gt; &quot;API User&quot;,
And(ISPICKVAL( Dress_Code_for_Event__c , &apos;Other&apos;),
 ISBLANK( Other_Dress_Code_Details__c) ))</errorConditionFormula>
        <errorDisplayField>Other_Dress_Code_Details__c</errorDisplayField>
        <errorMessage>Please enter additional dress code details</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Other_Vendor_Comments</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
$Profile.Name  &lt;&gt; &quot;API User&quot;,
AND(INCLUDES ( Additional_Vendors__c, &quot;Other - List Below&quot; ),ISBLANK(Additional_Vendor_Name__c)))</errorConditionFormula>
        <errorDisplayField>Additional_Vendor_Name__c</errorDisplayField>
        <errorMessage>Please enter vendor comments</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Performance_Guarantees</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$Profile.Name  &lt;&gt; &quot;API User&quot;,
AND(ISPICKVAL(Performance_Guarantees__c,&apos;Yes&apos;),ISBLANK(Performance_Guarantees_Comments__c)))</errorConditionFormula>
        <errorDisplayField>Performance_Guarantees_Comments__c</errorDisplayField>
        <errorMessage>Please enter comments.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Additional_Vendor</fullName>
        <active>true</active>
        <description>Executes if field &apos;Carrier Type&apos; = Multi Carrier and field &apos;Additional Vendors&apos; is null</description>
        <errorConditionFormula>AND(
$Profile.Name  &lt;&gt; &quot;API User&quot;,
ISPICKVAL(Sole_Carrier_or_Multi_Carriers__c, &apos;Multi Carrier&apos;)  &amp;&amp;  ISBLANK(Additional_Vendors__c))</errorConditionFormula>
        <errorDisplayField>Additional_Vendors__c</errorDisplayField>
        <errorMessage>Please enter additional vendors</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Vendor_Names</fullName>
        <active>false</active>
        <description>Executes if field &apos;Carrier Type&apos; = Multi Carrier and field &apos;Additional Vendor = null</description>
        <errorConditionFormula>AND(
$Profile.Name  &lt;&gt; &quot;API User&quot;,
ISPICKVAL(Sole_Carrier_or_Multi_Carriers__c, &apos;Multi Carrier&apos;)  &amp;&amp; ISBLANK(Additional_Vendor_Name__c))</errorConditionFormula>
        <errorDisplayField>Additional_Vendor_Name__c</errorDisplayField>
        <errorMessage>Please enter associated vendor names</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_is_voluntary_if_Yes_Specialty</fullName>
        <active>false</active>
        <description>If Are specialty lines being offered + Yes then “If yes, is this a voluntary arrangement?  is required</description>
        <errorConditionFormula>AND(
$Profile.Name  &lt;&gt; &quot;API User&quot;,
AND(TEXT(Are_specialty_lines_being_offered__c) = &apos;Yes&apos; ,  ISBLANK( TEXT(Is_this_a_voluntary_arrangement__c) ) ))</errorConditionFormula>
        <errorDisplayField>Is_this_a_voluntary_arrangement__c</errorDisplayField>
        <errorMessage>When &apos;Are specialty lines being offered is Yes&apos; , then &apos;Is this a voluntary arrangement?&apos; is required.</errorMessage>
    </validationRules>
</CustomObject>